--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
   <div class="page">
     <header class="header">
       <img class="header__logo" src="./images/header-logo.svg" alt="Россия">
-      <a class="header__lang-link header__lang-link_lang_ru" href="#">RU</a>
-      <a class="header__lang-link" href="#">EN</a>
+      <a class="header__lang-link" href="#">Ru</a>
+      <a class="header__lang-link header__lang-link_lang_eng" href="#">En</a>
     </header>
     <main class="content">
       <section class="lead">
         <h1 class="lead__title">Путешествия по России</h1>
         <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-        <img class="lead__image" src="./images/lead-polka.jpg" alt="Изображения">
-        <p class="lead__caption">Ваша полка - верхняя</p>
+        <div class="lead__image"></div>
+        <p class="lead__caption">Ваша полка &mdash; верхняя</p>
       </section>
       <section class="intro">
         <h2 class="intro__title">Чего мы там не видели?</h2>
@@ -116,20 +116,20 @@
 
       <section class="cover">
         <div class="cover__background">
-            <p class="cover__title">До Байкала</p>
-            <p class="cover__title">"на собаках"</p>
+            <h2 class="cover__title">До Байкала</h2>
+            <h2 class="cover__title">«на собаках»</h2>
             <p class="cover__subtitle">По мотивам учебной темы о Транссибе и iframes — путешествие от столицы до Байкала на электричках.</p>
         </div>
       </section>
     </main>
     <footer class="footer">
-      <nav class="footer__links">
-        <a class="footer__link" href="#">Карты</a>
-        <a class="footer__link" href="#">Погода</a>
-        <a class="footer__link" href="#">Расписание</a>
-        <a class="footer__link" href="#">Календарь</a>
-        <a class="footer__link" href="#">Путешествия</a>
-      </nav>
+      <ul class="footer__links">
+        <li><a class="footer__link" href="#">Карты</a></li>
+        <li><a class="footer__link" href="#">Погода</a></li>
+        <li><a class="footer__link" href="#">Расписание</a></li>
+        <li><a class="footer__link" href="#">Календарь</a></li>
+        <li><a class="footer__link" href="#">Путешествия</a></li>
+      </ul>
       <p class="footer__copyright">&#169; 2020. Бабушкина О.</p>
     </footer>
   </div>
