--- a/index.html
+++ b/index.html
@@ -10,15 +10,17 @@
   <div class="page">
     <header class="header">
       <img class="header__logo" src="./images/header-logo.svg" alt="Россия">
-      <a class="header__lang-link" href="#">Ru</a>
-      <a class="header__lang-link header__lang-link_lang_eng" href="#">En</a>
+      <a class="header__lang-link header__lang-link_active" href="#">Ru</a>
+      <a class="header__lang-link" href="#">En</a>
     </header>
     <main class="content">
       <section class="lead">
         <h1 class="lead__title">Путешествия по России</h1>
         <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-        <div class="lead__image"></div>
-        <p class="lead__caption">Ваша полка &mdash; верхняя</p>
+        <figure class="lead__image-container">
+          <img class="lead__image" src="./images/lead-polka.jpg" alt="Полка в плацкартном вагон">
+          <figurecaption class="lead__caption">Ваша полка &mdash; верхняя</figurecaption>
+        </figure>
       </section>
       <section class="intro">
         <h2 class="intro__title">Чего мы там не видели?</h2>
@@ -50,8 +52,8 @@
         <div class="place">
           <h2 class="place__title">Куршская коса</h2>
           <div class="place__website">
-            <p class="place__website place__website_url-heading">URL</p>
-            <a class="place__website place__website_link" href="http://park-kosa.ru">park-kosa.ru</a>
+            <p class="place__url-heading">url</p>
+            <a class="place__link" href="http://park-kosa.ru">park-kosa.ru</a>
           </div> 
           <img class="place__image" src="./images/place-kosa.jpg" alt="Куршская коса">
           <div class="place__info">
@@ -63,8 +65,8 @@
         <div class="place">
           <h2 class="place__title">Кольский</h2>
           <div class="place__website">
-            <p class="place__website place__website_url-heading">URL</p>
-            <a class="place__website place__website_link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
+            <p class="place__url-heading">url</p>
+            <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
           </div> 
           <img class="place__image" src="./images/place-kolsky.jpg" alt="Кольский">
           <div class="place__info">
@@ -76,8 +78,8 @@
         <div class="place">
           <h2 class="place__title">Алтай</h2>
           <div class="place__website">
-            <p class="place__website_url-heading">URL</p>
-            <a class="place__website_link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
+            <p class="place__url-heading">url</p>
+            <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
           </div> 
           <img class="place__image" src="./images/place-altai.jpg" alt="Алтай">
           <div class="place__info">
@@ -89,8 +91,8 @@
         <div class="place">
           <h2 class="place__title">Зимний Байкал</h2>
           <div class="place__website">
-            <p class="place__website_url-heading">URL</p>
-            <a class="place__website_link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
+            <p class="place__url-heading">url</p>
+            <a class="place__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
           </div> 
           <img class="place__image" src="./images/place-winter-baikal.jpg" alt="Зимний Байкал">
           <div class="place__info">
@@ -102,8 +104,8 @@
         <div class="place">
           <h2 class="place__title">Карелия</h2>
           <div class="place__website">
-            <p class="place__website_url-heading">URL</p>
-            <a class="place__website_link" href="http://vodlozero.ru">http://vodlozero.ru</a>
+            <p class="place__url-heading">url</p>
+            <a class="place__link" href="http://vodlozero.ru">http://vodlozero.ru</a>
           </div> 
           <img class="place__image" src="./images/place-karelia.jpg" alt="Зимний Байкал">
           <div class="place__info">
@@ -116,21 +118,20 @@
 
       <section class="cover">
         <div class="cover__background">
-            <h2 class="cover__title">До Байкала</h2>
-            <h2 class="cover__title">«на собаках»</h2>
+            <h2 class="cover__title">До Байкала «на собаках»</h2>
             <p class="cover__subtitle">По мотивам учебной темы о Транссибе и iframes — путешествие от столицы до Байкала на электричках.</p>
         </div>
       </section>
     </main>
     <footer class="footer">
-      <ul class="footer__links">
-        <li><a class="footer__link" href="#">Карты</a></li>
-        <li><a class="footer__link" href="#">Погода</a></li>
-        <li><a class="footer__link" href="#">Расписание</a></li>
-        <li><a class="footer__link" href="#">Календарь</a></li>
-        <li><a class="footer__link" href="#">Путешествия</a></li>
-      </ul>
-      <p class="footer__copyright">&#169; 2020. Бабушкина О.</p>
+      <nav class="footer__links">
+        <a class="footer__link" href="#">Карты</a>
+        <a class="footer__link" href="#">Погода</a>
+        <a class="footer__link" href="#">Расписание</a>
+        <a class="footer__link" href="#">Календарь</a>
+        <a class="footer__link" href="#">Путешествия</a>
+      </nav>
+      <p class="footer__copyright">&copy; 2020. Бабушкина О.</p>
     </footer>
   </div>
 </body>
