исправлены замечания 2го код-ревью

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./styles/index.css">
+  <link rel="stylesheet" href="./pages/index.css">
   <title>Путешествия по России</title>
 </head>
 <body>
@@ -124,15 +124,17 @@
       </section>
     </main>
     <footer class="footer">
-      <nav class="footer__links">
-        <a class="footer__link" href="#">Карты</a>
-        <a class="footer__link" href="#">Погода</a>
-        <a class="footer__link" href="#">Расписание</a>
-        <a class="footer__link" href="#">Календарь</a>
-        <a class="footer__link" href="#">Путешествия</a>
+      <nav>
+        <ul class="footer__links">
+          <li><a class="footer__link" href="#">Карты</a></li>
+          <li><a class="footer__link" href="#">Погода</a></li>
+          <li><a class="footer__link" href="#">Расписание</a></li>
+          <li><a class="footer__link" href="#">Календарь</a></li>
+          <li><a class="footer__link" href="#">Путешествия</a></li>
+        </ul>
       </nav>
       <p class="footer__copyright">&copy; 2020. Бабушкина О.</p>
     </footer>
   </div>
 </body>
-
+</html>
